Navbar styling changes, admin panel spacing changes, and main page overflow fix for desktop and mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,14 @@ input{
 	color:  #2FE722;
 }
 
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover {
+	color: rgb(38, 150, 20) !important;
+}
+
+ul.nav a:hover { 
+	color: rgb(38, 150, 20) !important;
+}
+
 .glyphicon-leaf{
 	margin-right: 8px;
 }
@@ -120,8 +128,9 @@ input{
 	background-size: cover;
 	background-position: center;
 	padding-top: 150px;
-	/*overflow: scroll;*/
+	overflow: hidden;
 	padding-bottom: 70px;
+
 }
 .center{
 	text-align: center;
@@ -172,6 +181,8 @@ button{
 .white-text {
 	color: white;
 }
+
+
 
 @media screen and (max-width: 768px) {
   
